--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "passwords"
+name = "genpass"
 version = "0.1.0"
-authors = ["gareth"]
+authors = ["Gareth Fleming <gareth@joocy.com>"]
 
 [dependencies]
 clap = "2.26.2"
